# uhtml-pics-parse

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: build.sh  release.sh
src/: extractor.rs  main.rs  updater.rs
