[package]
name = "uhtml-pics-parse"
version = "1.0.1"
edition = "2021"
description = "UHTML图片批量提取工具 (Rust版本)"
authors = ["Claude"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"
walkdir = "2.3"
anyhow = "1.0"
thiserror = "1.0"
image = "0.24"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
